--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,5 @@
 name: Sync C++ Defines
 
-# 触发条件：每天一次（UTC时间0点）和手动触发
 on:
   schedule:
     - cron: '0 0 * * *'  # 每天UTC 0点运行
@@ -14,7 +13,8 @@ jobs:
     - name: Checkout current repository (for script and destination)
       uses: actions/checkout@v4
       with:
-        fetch-depth: 0  # 获取完整历史以便推送
+        fetch-depth: 0
+        token: ${{ secrets.GITHUB_TOKEN }}
         
     - name: Clone Repository A
       run: |
